--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -36,16 +36,16 @@
 
 
 .background-confedi{
-   background: url("../img/fondo2.jpg") no-repeat center center fixed; 
-     -webkit-background-size: cover;
+  background: url("../img/fondo2.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-    min-height: 100vh;
+  min-height: 100vh;
 }
 
 .background-confedi-gradient{
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../img/fondo2.jpg");
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url("../img/bienvenidos.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     
