--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -74,6 +74,22 @@
   z-index:100;
 }
 
+
+.float2{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:110px;
+	right:40px;
+	background-color:#ce140d;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
+
 .my-float{
 	margin-top:16px;
 }
