cambios de font-family a
UniversLTStd nueva fuente a cambio de "Rubik"

--- a/assets/css/entypo.css
+++ b/assets/css/entypo.css
@@ -9,6 +9,21 @@
   font-weight: normal;
   font-style: normal;
 }
+
+
+
+@font-face {
+  font-family: UniversLTStd;
+  src: url("../fonts/UniversLTStd.otf") format("opentype");
+}
+
+@font-face {
+  font-family: UniversLTStd;
+  font-weight: bold;
+  src: url("../fonts/UniversLTStd-Bold.otf") format("opentype");
+}
+
+
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
 /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
 /*
