--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -61,10 +61,14 @@
   font-size: 0.7rem;
 }
 
+.text-label-register{
+  color: #01548a !important;
+}
+
 .custom-link {
   font-size: 1.5rem;
   color: white;
-  text-shadow: rgb(8 0 0) 1px 2px;
+  text-shadow: rgb(8 0 0) 1px 1px;
 }
 
 .custom-link:hover{
