--- a/assets/css/jquery.flipTimer.css
+++ b/assets/css/jquery.flipTimer.css
@@ -1,10 +1,10 @@
 body {
   background: #333;
-  font-family: sans-serif;
+ /*  font-family: sans-serif; */
 }
 
 .flipper {
-  color: #333;
+  color: #ff6002;
   display: block;
   font-size: 50px;
   line-height: 100%;
