fix como participar low containers
Pasos a seguir

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1038,7 +1038,7 @@ pre {
 .table {
   width: 100%;
   margin-bottom: 1.5rem;
-  color: #212529;
+  /* color: #212529; */
   background-color: transparent; }
   .table th,
   .table td {
