add avatar to yellow background

--- a/assets/css/entypo.css
+++ b/assets/css/entypo.css
@@ -23,6 +23,12 @@
   src: url("../fonts/UniversLTStd-Bold.otf") format("opentype");
 }
 
+@font-face {
+  font-family: "FuturaStdExtraBoldOblique";
+  font-weight: bold;
+  src: url("../fonts/FuturaStdExtraBoldOblique.otf") format("opentype");
+}
+
 
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
 /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
